# passwordManager

./: .gitignore  Cargo.toml  README.md  travis.yml
.devcontainer/: devcontainer.json
rsc/: serviceList.csv  serviceList.enc
src/: command.rs  data.csv  main.rs  manage_file.rs  serviceList.csv  write.csv
src/command/: download.rs  grep.rs  help.rs  list.rs  show.rs  upload.rs
