[package]
name = "mpw"
version = "0.1.0"
authors = ["juryokun"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
regex = "1"
cfg-if = "1"
aes-stream = "0.2.1"
rust-crypto = "0.2"
rusoto_core = "0.40.0"
rusoto_s3 = "0.40.0"
futures = "0.1.29"